tests/baselines/reference/jsxViaImport.errors.txt
component.d.ts(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
component.d.ts(4,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
consumer.tsx(5,17): error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.


==== consumer.tsx (1 errors) ====
    /// <reference path="component.d.ts" />
    import BaseComponent = require('BaseComponent');
    class TestComponent extends React.Component<any, {}> {
        render() {
            return <BaseComponent />;
                    ~~~~~~~~~~~~~
!!! error TS2604: JSX element type 'BaseComponent' does not have any construct or call signatures.
        }
    }
    
==== component.d.ts (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      interface ElementAttributesProperty { props; }
    }
    declare module React {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      class Component<T, U> { }
    }
    declare module "BaseComponent" {
        var base: React.Component<any, {}>;
        export = base;
    }
    